gitops/rhai-workbench/inference-service-route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  annotations:
    openshift.io/host.generated: 'true'
  name: hands-recognizer
  namespace: mlops-workshop
  ownerReferences:
    - apiVersion: serving.kserve.io/v1beta1
      kind: InferenceService
      name: model
      controller: true
      blockOwnerDeletion: true
  labels:
    inferenceservice-name: model
spec:
  host: hands-recognizer-mlops-workshop.apps.cluster-t28qp.dynamic.redhatworkshops.io
  path: /v2/models/model
  to:
    kind: Service
    name: modelmesh-serving
    weight: 100
  port:
    targetPort: 8008
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
